# 6IDE7

./: .gitignore  Cargo.toml  README.md
crates/ide-app/: Cargo.toml
crates/ide-app/src/: main.rs
crates/ide-ui/: Cargo.toml
crates/ide-ui/src/: blocks.rs  canvas.rs  code_preview.rs  graph.rs  history.rs  lib.rs  output.rs  settings.rs  sidebar.rs  theme.rs  toolbar.rs  types.rs
crates/ide-ui/src/codegen/: javascript.rs  mod.rs  python.rs  rust.rs
crates/ide-ui/src/execution/: mod.rs
crates/ide-ui/src/widgets/: button.rs  mod.rs  panel.rs  scroll.rs  split.rs
docs/: ARCHITECTURE.md
