[workspace]
resolver = "2"
members = [
    "crates/ide-app",
    "crates/ide-ui",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["6IDE7 Team"]
license = "MIT"
repository = "https://github.com/vfyov6621-coder/6IDE7"

[workspace.dependencies]
# GUI Framework
druid = { version = "0.8.3", features = ["im", "svg", "image"] }

# Data structures
im = "15.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Utilities
once_cell = "1.19"
